# cleanlab-platform-demo

./: README.md
backend/: .env.sample  .gitignore  cli.py  create_knowledge_base.py  pyproject.toml  test_env.py
backend/example_data/cursor_docs/: account_billing.md  account_dashboard.md  account_plans-and-usage.md  account_privacy.md  account_teams_analytics.md  account_teams_members.md  account_teams_setup.md  account_teams_sso.md  beta_notepads.md  chat_agent.md  chat_apply.md  chat_ask.md  chat_custom-modes.md  chat_manual.md  chat_overview.md  chat_tools.md  cmdk_overview.md  cmdk_terminal-cmdk.md  context_@-symbols_@-code.md  context_@-symbols_@-cursor-rules.md  context_@-symbols_@-definitions.md  context_@-symbols_@-docs.md  context_@-symbols_@-files.md  context_@-symbols_@-folders.md  context_@-symbols_@-git.md  context_@-symbols_@-link.md  context_@-symbols_@-lint-errors.md  context_@-symbols_@-notepads.md  context_@-symbols_@-recent-changes.md  context_@-symbols_@-summarized-composers.md  context_@-symbols_@-web.md  context_@-symbols_overview.md  context_@-symbols_pill-files.md  context_@-symbols_slash-commands.md  context_codebase-indexing.md  context_ignore-files.md  context_model-context-protocol.md  context_rules.md  faq.md  get-started_installation.md  (+20 more)
backend/src/: app.py
backend/src/rag/: constants.py  knowledge_base.py  rag.py
backend/src/routers/: rag.py
backend/src/schemas/: message.py
backend/src/services/: chat.py
frontend/: .gitignore  middleware.ts  next.config.js  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json  (+2 more)
(+145 files in other folders)
